--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,207 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
+.home{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     width: 100%;
+    background: url(../public/hero-bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.twocol{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 80%;
+    height: 70%;
+    margin: 20px auto;
+}
+.leftcol{
+    display: flex;
     flex-direction: column;
-  }
+    align-items: left;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
 }
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+.rightcol{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    z-index: 1;
+    animation: upperneche 6s ease-in-out infinite;
 }
+@keyframes upperneche{
+    50%{
+        transform: translateY(40px);
+    }
+}
+.countdowner{
+    width: 100%;
+    height: 100%;
+    color: white;
+    border-radius: 35px;
+}
+.countdowntext{
+    text-align: center;
+    font-weight: 700;
+    font-size: 34px;
+    font-family: Nunito;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    color: #fff;
+}
+.countdownerfirst{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 100%;
+    padding: 10px;
+    background: #fff;
+    border-radius: 15px;
+    color: #ff3000;
+}
+.days, .hours, .seconds, .minutes{
+    font-size: 18px;
+    text-align: center;
+    font-weight: 700;
+    font-family: Nunito;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+}
+.box1{
+    width: 100%;
+    padding: 10px;
+    color: #ff3000;
+    text-align: center;
+    border-left: 0.1px solid #000;
+    border-right: 0.1px solid #000;
+}
+.MiniStart{
+    width: 100%;
+    padding: 10px;
+    background: rgba(225,225,225,0.2);
+    backdrop-filter: blur(10px);
+    color: #ff3000;
+    border-radius: 15px;
+    margin-top: 10px;
+    background: rgba(225,225,225,0.2);
+    backdrop-filter: blur(10px);
+}
+.box2{
+    width: 100%;
+    padding: 10px;
+}
+.formtittle{
+    color: #ff3000;
+    font-size: 24px;
+    font-weight: 500;
+    text-align: center;
+}
+.form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.input{
+    padding: 15px 25px;
+    width: 100%;
+    border: none;
+    margin: 10px 0px;
+    border-radius: 34px;
+    outline: none;
+    box-shadow: rgba(0, 0, 0, 0.1) 5px 5px 50px;
+}
+.deem{
+    padding: 5px;
+    border: none;
+    border-radius: 4px;
+    background: rgba(225,225,225,0.2);
+    backdrop-filter: blur(10px);
+    color: white;
+    width: 290px;
+}
+.h3{
+    color: white;
+    font-size: 36px;
+    font-weight: 400;
+    font-family: Nunito;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+}
+.h1{
+    font-size: 48px;
+    font-weight: 700;
+    font-family: Nunito;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    background: linear-gradient(50deg, yellow, #ff3000);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
+/* Styling Of Our Brand New Buttons 😉 */
+.btn{
+    padding: 10px 20px;
+    width: 200px;
+    border: none;
+    border-radius: 5px;
+    background: #ff3000;
+    color: white;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: 400;
+    transition: all 0.6s;
+    font-family: 'Nunito', sans-serif;
+  }
+  .btn:hover{
+    background: rgba(225,225,225,0.2);
+    backdrop-filter: blur(10px);
+  }
+  .p{
+    color: white;
+    font-size: 15px;
+    font-weight: 200;
+    font-family: Nunito;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    margin-bottom: 10px;
+  }
+  /* Styling Of Our Brand New Mobile View 😉 */
+@media only screen and (max-width: 768px) {
+    .home{
+        background-size: cover;
+        height: auto;
+    }
+    .twocol{
+        grid-template-columns: 1fr;
+        width: 100%;
+    }
+    .rightcol{
+        animation: none;
+        padding: 10px;
+        width: 100%;
+    }
+    .countdowntext{
+        font-size: 23px;
+    }
+    .countdownerfirst{
+        grid-template-columns: 1fr 1fr;
+    }
+    .box1{
+        border-left: none;
+        border-right: none;
+        border-bottom: 0.1px solid #000;
+    }
+  }
