--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,11 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 a {
-  color: inherit;
+  color: #020e4a;
   text-decoration: none;
 }
 
@@ -15,12 +14,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
+/* Another Colors  */
+/* 🎧 Blue: #020e4a
+   🎧 Black: #121212 
+*/
