--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -34,6 +34,9 @@
     height: 100%;
     padding: 10px;
     z-index: 1;
+    background:rgba(225,225,225,0.2);
+    backdrop-filter: blur(20px);
+    border-radius: 34px ;
     animation: upperneche 6s ease-in-out infinite;
 }
 @keyframes upperneche{
@@ -41,85 +44,10 @@
         transform: translateY(40px);
     }
 }
-.countdowner{
-    width: 100%;
-    height: 100%;
-    color: white;
-    border-radius: 35px;
-}
 .countdowntext{
-    text-align: center;
-    font-weight: 700;
     font-size: 34px;
-    font-family: Nunito;
-    font-style: normal;
-    letter-spacing: normal;
-    line-height: normal;
-    color: #fff;
-}
-.countdownerfirst{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    width: 100%;
-    padding: 10px;
-    background: #fff;
-    border-radius: 15px;
-    color: #ff3000;
-}
-.days, .hours, .seconds, .minutes{
-    font-size: 18px;
     text-align: center;
-    font-weight: 700;
-    font-family: Nunito;
-    font-style: normal;
-    letter-spacing: normal;
-    line-height: normal;
-}
-.box1{
-    width: 100%;
-    padding: 10px;
-    color: #ff3000;
-    text-align: center;
-    border-left: 0.1px solid #000;
-    border-right: 0.1px solid #000;
-}
-.MiniStart{
-    width: 100%;
-    padding: 10px;
-    background: rgba(225,225,225,0.2);
-    backdrop-filter: blur(10px);
-    color: #ff3000;
-    border-radius: 15px;
-    margin-top: 10px;
-    background: rgba(225,225,225,0.2);
-    backdrop-filter: blur(10px);
-}
-.box2{
-    width: 100%;
-    padding: 10px;
-}
-.formtittle{
-    color: #ff3000;
-    font-size: 24px;
-    font-weight: 500;
-    text-align: center;
-}
-.form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-}
-.input{
-    padding: 15px 25px;
-    width: 100%;
-    border: none;
-    margin: 10px 0px;
-    border-radius: 34px;
-    outline: none;
-    box-shadow: rgba(0, 0, 0, 0.1) 5px 5px 50px;
+    color: white;
 }
 .deem{
     padding: 5px;
@@ -177,12 +105,13 @@
     letter-spacing: normal;
     line-height: normal;
     margin-bottom: 10px;
+    margin-top: 10px;
   }
   /* Styling Of Our Brand New Mobile View 😉 */
 @media only screen and (max-width: 768px) {
     .home{
         background-size: cover;
-        height: auto;
+        height: 100vh;
     }
     .twocol{
         grid-template-columns: 1fr;
@@ -191,7 +120,8 @@
     .rightcol{
         animation: none;
         padding: 10px;
-        width: 100%;
+        width: 80%;
+        margin: 0 auto;
     }
     .countdowntext{
         font-size: 23px;
