Added Something Great!

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -34,8 +34,6 @@
     height: 100%;
     padding: 10px;
     z-index: 1;
-    background:rgba(225,225,225,0.2);
-    backdrop-filter: blur(20px);
     border-radius: 34px ;
     animation: upperneche 6s ease-in-out infinite;
 }
@@ -47,7 +45,9 @@
 .countdowntext{
     font-size: 34px;
     text-align: center;
-    color: white;
+    background: linear-gradient(50deg, cyan, #ff3000);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 .deem{
     padding: 5px;
