--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -47,7 +47,7 @@
 .countdowntext{
     font-size: 34px;
     text-align: center;
-    background: linear-gradient(50deg, cyan, #ff3000);
+    background: linear-gradient(50deg, cyan, #fff);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
@@ -109,6 +109,100 @@
     margin-bottom: 10px;
     margin-top: 10px;
   }
+
+/* Styling Training About Section  */
+.tainingabout{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+.trainingaboutmaincontainer{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 80%;
+    margin: 10px auto;
+    padding: 10px;
+    border-radius: 6px;
+}
+.leftcol2{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+}
+.rightcol2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    z-index: 1;
+}
+.h4{
+    color: #020e4a;
+    font-size: 32px;
+}
+.deem1{
+    padding: 5px;
+    border: none;
+    border-radius: 4px;
+    background: rgba(225,225,225,0.2);
+    backdrop-filter: blur(10px);
+    color: #ff3000;
+    width: 290px;
+}
+.btnwithback{
+    padding: 10px 20px;
+    width: 200px;
+    border: none;
+    border-radius: 5px;
+    background: linear-gradient(50deg, yellow, #ff3000);
+    color: white;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: 400;
+    transition: all 0.6s;
+    font-family: 'Nunito', sans-serif;
+}
+.btnwithback:hover{
+    backdrop-filter: blur(10px);
+    background: linear-gradient(50deg, yellow, #ff3000);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+  }
+.text{
+    font-size: 16px;
+    font-weight: 500;
+}
+/* Stylings The Benifits Section Below About Training  */
+.benifits{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.card{
+    text-align: center;
+    width: auto;
+    padding: 10px;
+}
+.card:hover{
+    background: linear-gradient(50deg, yellow, #ff3000);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    cursor: pointer;
+}
+/* Styling Our Table Cards  */
+
+
+
+
+
   /* Styling Of Our Brand New Mobile View 😉 */
 @media only screen and (max-width: 768px) {
     .home{
@@ -122,8 +216,16 @@
     .rightcol{
         animation: none;
         padding: 10px;
-        width: 80%;
+        width: 95%;
         margin: 0 auto;
+    }
+    .trainingaboutmaincontainer{
+        grid-template-columns: 1fr;
+        width: 100%;
+    }
+    .rightcol2{
+        width: 80%;
+        /* margin: 0 auto; */
     }
     .countdowntext{
         font-size: 23px;
