--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -34,10 +34,80 @@
     height: 100%;
     padding: 10px;
     z-index: 1;
+    animation: upperneche 6s ease-in-out infinite;
+}
+.countdownerfirst{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 100%;
+    text-align: center;
     background: rgba(225,225,225,0.2);
     backdrop-filter: blur(10px);
-    border-radius: 34px ;
-    animation: upperneche 6s ease-in-out infinite;
+    padding: 10px;
+    border-radius: 6px;
+}
+.box1, .box2, .box3, .box4{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    width: 100%;
+    font-size: 20px;
+    font-weight: 700;
+    color: #fff;
+    margin: 0 auto;
+}
+.box1, .box2, .box3{
+    border-right: 1px solid #fff;
+}
+.MiniStart{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    background: rgba(225,225,225,0.2);
+    backdrop-filter: blur(10px);
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 6px;
+}
+.box5{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    width: 100%;
+    font-size: 20px;
+    font-weight: 700;
+    color: #fff;
+}
+.formtittle{
+    font-size: 30px;
+    font-weight: 700;
+    background: linear-gradient(50deg, yellow, #fff);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+.h2{
+    font-size: 38px;
+    font-weight: 700;
+    font-family: Nunito;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    background: linear-gradient(50deg, yellow, #fff);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+.input{
+    padding: 10px;
+    border: none;
+    outline: none;
+    width: 100%;
+    border-radius: 6px;
+    margin-bottom: 10px;
 }
 @keyframes upperneche{
     50%{
@@ -47,9 +117,10 @@
 .countdowntext{
     font-size: 34px;
     text-align: center;
-    background: linear-gradient(50deg, cyan, #fff);
+    background: linear-gradient(50deg, yellow, #ff3000);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+    background-clip: text;
 }
 .deem{
     padding: 5px;
@@ -79,6 +150,7 @@
     background: linear-gradient(50deg, yellow, #ff3000);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+    background-clip: text;
 }
 /* Styling Of Our Brand New Buttons 😉 */
 .btn{
@@ -154,7 +226,18 @@
     background: rgba(225,225,225,0.2);
     backdrop-filter: blur(10px);
     color: #ff3000;
-    width: 290px;
+    width: 100%;
+    text-align: left;
+}
+.deem2{
+    padding: 5px;
+    border: none;
+    border-radius: 4px;
+    background: rgba(225,225,225,0.2);
+    backdrop-filter: blur(10px);
+    color: #ff3000;
+    width: 100%;
+    text-align: left;
 }
 .btnwithback{
     padding: 10px 20px;
@@ -174,10 +257,12 @@
     background: linear-gradient(50deg, yellow, #ff3000);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+    background-clip: text;
   }
 .text{
     font-size: 16px;
     font-weight: 500;
+    padding: 5px;
 }
 /* Stylings The Benifits Section Below About Training  */
 .benifits{
@@ -195,19 +280,92 @@
     background: linear-gradient(50deg, yellow, #ff3000);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+    background-clip: text;
     cursor: pointer;
 }
-/* Styling Our Table Cards  */
-
-
-
-
-
+/* Styling Our section3  */
+.section3{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+.trainingaboutmaincontainer{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 80%;
+    margin: 10px auto;
+    padding: 10px;
+    border-radius: 6px;
+}
+.TeamImg{
+    width: 90%;
+    animation: upperneche 2s ease-in-out infinite;
+}
+.h1heading{
+    font-size: 34px;
+    font-weight: 700;
+    background: linear-gradient(50deg, yellow, #ff3000);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    cursor: pointer;
+    text-align: center;
+}
+.h3heading{
+    font-size: 24px;
+    font-weight: 400;
+    text-align: center;
+    color: #020e4a;
+    cursor: pointer;
+}
+.textbox{
+    display: grid;
+    grid-template-columns: 10% 90%;
+    gap: 4px;
+    place-items: center;
+    padding: 10px;
+    width: 100%;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 20px 0px;
+    margin-top: 10px;
+}
+.textboxright{
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    word-break: break-word;
+    width: 100%;
+    padding: 2px;
+}
+.iconmock1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 54px;
+    height: 54px;
+    border-radius: 50%;
+    background: #020e4a;
+    color: #ff3000;
+    font-size: 24px;
+}
+.h2text{
+    font-size: 19px;
+    font-weight: 600;
+    text-align: left;
+    background: linear-gradient(50deg, #020e4a, #ff3000);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    padding: 2px;
+}
+.text2{
+    text-align: left;
+    padding: 2px;
+}
   /* Styling Of Our Brand New Mobile View 😉 */
 @media only screen and (max-width: 768px) {
     .home{
         background-size: cover;
-        height: 100vh;
+        height: 130vh;
     }
     .twocol{
         grid-template-columns: 1fr;
@@ -227,15 +385,62 @@
         width: 80%;
         /* margin: 0 auto; */
     }
+    .box1, .box2, .box3{
+        border: none;
+    }
+    .box1{
+        border-bottom: none;
+    }
     .countdowntext{
         font-size: 23px;
     }
     .countdownerfirst{
         grid-template-columns: 1fr 1fr;
     }
-    .box1{
-        border-left: none;
-        border-right: none;
-        border-bottom: 0.1px solid #000;
+    .h2{
+        text-align: center;
+    }
+    .deem1{
+        width: 100%;
+        text-align: center;
+        margin: 0 auto;
+    }
+    .h4{
+        text-align: center;
+    }
+    .p1{
+        text-align: center;
+    }
+    .btnwithback{
+        margin: 10px auto;
+    }
+    .rightcol2{
+        width: 100%;
+    }
+    .text{
+        text-align: center;
+    }
+    .deem2{
+        text-align: center;
+    }
+    .tainingabout{
+        height: auto;
+        margin-bottom: 10px;
+    }
+    .textbox{
+        display: flex;
+        flex-direction: column;
+    }
+    .textboxright{
+        text-align: center;
+    }
+    .h2text, .text2{
+        text-align: center;
+    }
+    .section3{
+        height: auto;
+    }
+    .TeamImg{
+        margin: 0 auto;
     }
   }
