--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,29 @@ a {
 * {
   box-sizing: border-box;
 }
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #ff3300 #ffffff;
+  }
 
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #ff3300;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+  }
+
+  
 /* Another Colors  */
 /* 🎧 Blue: #020e4a
    🎧 Black: #121212 
