--- a/components/components.module.css
+++ b/components/components.module.css
@@ -61,6 +61,17 @@
   color: #ff3000;
   transition: all 0.6s;
 }
+.BsPerson {
+  font-size: 24px;
+  cursor: pointer;
+  margin: 0 5px;
+  display: none;
+}
+.BsPerson:hover {
+  border-radius: 4px;
+  color: #ff3000;
+  transition: all 0.6s;
+}
 .BsLinkedin {
   font-size: 24px;
   cursor: pointer;
@@ -151,6 +162,7 @@
   font-weight: 400;
   transition: all 0.6s;
   font-family: 'Nunito', sans-serif;
+  margin: 0 3px;
 }
 .btn2:hover{
   background: linear-gradient(50deg, yellow, #ff3000);
@@ -245,8 +257,10 @@
     padding: 10px;
   }
   .btn2{
-    width: 46%;
-    margin: 0 auto;
+    display: none;
+  }
+  .BsPerson{
+    display: block;
   }
   .leftfoot{
     padding: 10px;
