--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -457,7 +457,7 @@
 }
 .cardmore {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
   text-align: center;
