--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -236,6 +236,17 @@
   width: 100%;
   text-align: left;
 }
+.deemtable {
+  padding: 5px;
+  border: none;
+  border-radius: 4px;
+  background: rgba(225, 225, 225, 0.2);
+  backdrop-filter: blur(10px);
+  color: #ff3000;
+  width: 100%;
+  border: 0.1px solid silver;
+  text-align: center;
+}
 .deem2 {
   padding: 5px;
   border: none;
@@ -270,6 +281,16 @@
   font-size: 16px;
   font-weight: 500;
   padding: 5px;
+}
+.textborder{
+  font-size: 16px;
+  font-weight: 500;
+  padding: 5px;
+  width: 100%;
+  border-radius: 6px;
+  border-bottom: 0.1px solid silver;
+  border-left: 0.1px solid silver;
+  border-right: 0.1px solid silver;
 }
 /* Stylings The Benifits Section Below About Training  */
 .benifits {
