--- a/styles/courses.module.css
+++ b/styles/courses.module.css
@@ -4,10 +4,11 @@
     align-items: center;
     height: 100vh;
     width: 100%;
-    background: url(../public/vabrant-bg.jpg);
+    background: url(../public/hero-glow.svg);
+    background-color: rgb(17, 17, 85);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 90%;
   }
   .twocol {
     display: grid;
@@ -35,8 +36,97 @@
     height: 100%;
     padding: 10px;
     z-index: 1;
-    background: rgba(225,225,225,0.2);
-    backdrop-filter: blur(10px);
+
     border-radius: 6px;
+    overflow: hidden;
     animation: upperneche 6s ease-in-out infinite;
   }
+  .heroImg{
+    width: 800px;
+    height: 800px;
+  }
+  .deem {
+    padding: 5px;
+    border: none;
+    border-radius: 4px;
+    background: rgba(225, 225, 225, 0.2);
+    backdrop-filter: blur(10px);
+    color: white;
+    width: 290px;
+    margin: 10px 0px;
+  }
+  
+  .h3 {
+    color: white;
+    font-size: 26px;
+    font-weight: 400;
+    font-family: Nunito;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    margin: 10px 0px;
+  }
+  .h1 {
+    font-size: 34px;
+    font-weight: 700;
+    font-family: Nunito;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    background: linear-gradient(50deg, yellow, #ff3000);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    margin: 10px 0px;
+  }
+  .blah{
+    margin-top: 10px;
+  }
+  /* Styling Of Our Brand New Buttons 😉 */
+.btn {
+  padding: 15px 20px;
+  width: 40%;
+  border: none;
+  border-radius: 35px;
+  background: #ff3000;
+  color: white;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: 400;
+  transition: all 0.6s;
+  font-family: "Nunito", sans-serif;
+}
+.btn:hover {
+  background: rgba(225, 225, 225, 0.2);
+  backdrop-filter: blur(10px);
+}
+.btnwithborder {
+  padding: 15px 20px;
+  width: 40%;
+  border: none;
+  border-radius: 35px;
+  border: 1px solid #ff3000;
+  color: #ff3000;
+  background: transparent;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: 400;
+  transition: all 0.6s;
+  font-family: "Nunito", sans-serif;
+  margin-left: 5px;
+}
+.btnwithborder:hover {
+  background: rgba(225, 225, 225, 0.2);
+  backdrop-filter: blur(10px);
+}
+.p {
+  color: white;
+  font-size: 15px;
+  font-weight: 200;
+  font-family: Nunito;
+  font-style: normal;
+  letter-spacing: normal;
+  line-height: normal;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
