--- a/styles/courses.module.css
+++ b/styles/courses.module.css
@@ -124,6 +124,24 @@
   background: rgba(225, 225, 225, 0.2);
   backdrop-filter: blur(10px);
 }
+.black{
+  color: #020e4a;
+  padding: 15px 20px;
+  width: 40%;
+  border: none;
+  border-radius: 35px;
+  background: #ff3000;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: 400;
+  transition: all 0.6s;
+  font-family: "Nunito", sans-serif;
+}
+.black:hover {
+  background: #020e4a;
+  color: #ff3000;
+  backdrop-filter: blur(10px);
+}
 .btnwithborder {
   padding: 15px 20px;
   width: 40%;
@@ -259,10 +277,19 @@
 .coursesThird{
     height: auto;
     width: 100%;
-    background: url(../public/bg-gradient.png);
+    background: url(../public/bg-mock.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+.coursesFourth{
+  height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
 }
 .topcoursesThird{
   display: flex;
@@ -393,22 +420,36 @@
   place-items: center;
 }
 .purchase {
-  width: 80%;
+  width: 100%;
   margin: 20px auto;
   padding: 10px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
 }
 .purchaseleft {
-  width: 563px;
+  width: 80%;
   box-shadow: 0 2px 10px rgba(178, 178, 178, 0.35);
   border-radius: 10px;
   background-color: #f7f5f2;
-  margin-top: 10px;
+  margin: 10px auto;
   padding: 20px;
+}
+.grid3{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+}
+.grid4{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
+.grid2{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
+
+.hidecorosl{
+  display: none;
 }
 .purchaseright {
   width: 563px;
@@ -421,6 +462,11 @@
 }
 .h2purchase {
   color: #020e4a;
+  background-color: #f7f5f2;
+  padding: 20px;
+  border-radius: 6px;
+  width: 40%;
+  margin: 0 auto;
   font-family: Nunito;
   font-size: 32px;
   font-weight: 700;
@@ -435,6 +481,19 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  width: 100%;
+  height: 137px;
+  box-shadow: 0 2px 10px rgba(178, 178, 178, 0.35);
+  border-radius: 10px;
+  padding: 5px;
+  overflow: hidden;
+  background-color: #ffffff;
+}
+.purchasetopcard3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 137px;
   box-shadow: 0 2px 10px rgba(178, 178, 178, 0.35);
@@ -491,7 +550,7 @@ height: 36px;
   margin-right: 10px;
 }
 .basicfeatures {
-  width: 523px;
+  width: 100%;
   box-shadow: 0 2px 10px rgba(178, 178, 178, 0.35);
   border-radius: 10px;
   background-color: #ffffff;
@@ -669,5 +728,36 @@ height: 36px;
   }
   .coursesSecond{
     flex-direction: column;
+  }
+  .twocolnext{
+    grid-template-columns: 1fr;
+  }
+  .projectsbox{
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
+  .grid2, .grid3, .grid4{
+    grid-template-columns: 1fr;
+  }
+  .aligncenter{
+    width: 311px;
+    margin: 0 auto;
+    height: fit-content;
+  }
+  .h1next{
+    text-align: center;
+    margin: 0;
+  }
+  .purchaseleft{
+    width: 100%;
+  }
+  .h2purchase{
+    width: 100%;
+  }
+  .purchasetopcard3{
+    height: auto;
+  }
+  .black{
+    width: 100%;
   }
 }
