--- a/styles/courses.module.css
+++ b/styles/courses.module.css
@@ -295,6 +295,8 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  width: 70%;
+  margin: 0 auto;
 }
 .deem3{
   padding: 5px;
@@ -326,7 +328,15 @@
   grid-template-columns: 1fr 1fr 1fr;
   padding: 10px;
   gap: 10px;
-  width: 70%;
+  width: 100%;
+  margin: 0 auto;
+}
+.projectsbox5{
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 10px;
+  gap: 10px;
+  width: 100%;
   margin: 0 auto;
 }
 .box3{
@@ -703,6 +713,85 @@ height: 36px;
 .noxbtn:hover {
   box-shadow: 0 2px 10px rgba(178, 178, 178, 0.35);
 }
+/* Slider Section  */
+.feedbackbox{
+  display: flex;
+  flex-direction: column;
+  width: 559px;
+  border-radius: 14px;
+  padding: 10px;
+  height: 253px;
+  gap: 10px;
+  margin: 10px auto;
+  border: 0.1px solid silver;
+}
+.ImagePic{
+  width: 55px;
+  height: 55px;
+  background: url(../public/Harshita.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.ImagePic2{
+  width: 55px;
+  height: 55px;
+  background: url(../public/asrf.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.ImagePic3{
+  width: 55px;
+  height: 55px;
+  background: url(../public/Raushan.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.picandtittle{
+  width: 100%;
+  height: 90px;
+  padding: 5px;
+  display: grid;
+  place-content: center;
+  grid-template-columns: 13% 87%;
+  text-align: left;
+}
+.textaboutfeed{
+  width: 100%;
+  padding: 5px;
+}
+/* Last Section  */
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: #ccc; 
+}
+
+.panel {
+  padding: 0 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+}
 @media only screen and (max-width: 768px) {
   .courses{
     background-size: cover;
@@ -758,6 +847,12 @@ height: 36px;
     height: auto;
   }
   .black{
+    width: 100%;
+  }
+  .topcoursesThird{
+    width: 100%;
+  }
+  .projectsbox5{
     width: 100%;
   }
 }
