--- a/styles/careers.module.css
+++ b/styles/careers.module.css
@@ -8,10 +8,63 @@
     padding: 10px;
     text-align: center;
 }
+.Careersnext{
+    width: 100%;
+    height: 150vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    text-align: center;
+}
 .btn{
     padding: 10px 20px;
     border: none;
     border-radius: 34px;
     background: linear-gradient(90deg, gold, #ff3000);
     color: #fff;
+}
+.threecol{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 80%;
+    padding: 10px;
+}
+.instagram{
+    width: 90%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    border: 0.1px solid silver;
+    border-radius: 7px;
+    background: honeydew;
+    padding: 10px;
+}
+.linkdin{
+    width: 90%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    border: 0.1px solid silver;
+    border-radius: 7px;
+    background: honeydew;
+    padding: 10px;
+}
+.facebook{
+    width: 90%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    border: 0.1px solid silver;
+    border-radius: 7px;
+    background: honeydew;
+    padding: 10px;
+}
+.NextImg{
+    width: 100%;
+    height: 200px;
 }
