--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -285,7 +285,7 @@
 .textborder{
   font-size: 16px;
   font-weight: 500;
-  padding: 5px;
+  padding: 15px;
   width: 100%;
   border-radius: 6px;
   border-bottom: 0.1px solid silver;
@@ -413,6 +413,16 @@
   word-wrap: break-word;
   white-space: pre-wrap;
   word-break: break-word;
+}
+.hmocks{
+  font-size: 25px;
+  font-weight: 700;
+  text-align: center;
+  background: linear-gradient(50deg, #020e4a, #ff3000);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  padding: 10px 5px;
 }
 .text2 {
   text-align: left;
