--- a/styles/careers.module.css
+++ b/styles/careers.module.css
@@ -7,20 +7,69 @@
     align-items: center;
     padding: 10px;
     text-align: center;
+    background: url(../public/blue-background-abstract-background-windows-11-3840x2160-8846.jpg);
 }
 .Careersnext{
     width: 100%;
-    height: 150vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    padding: 60px 10px;
     text-align: center;
+}
+.twocol{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 80%;
+    padding: 10px;
+}
+.left{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    text-align: left;
+    color: lightblue;
+}
+.right{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.NextImgdiff{
+    width: 500px;
+    height: 500px;
+    animation: carrerani 2s infinite alternate-reverse ease-in-out;
+}
+.NextImgDex{
+    width: 450px;
+    height: 450px;
+    border-radius: 7px;
+    object-fit: cover;
+}
+.colorblack{
+    color: #ff3000;
+}
+.white{
+    color: #fff;
+}
+@keyframes carrerani{
+    0%{
+        transform: rotate(0deg) translateX(40px) rotate(0deg);
+
+    }
+    100%{
+        transform: rotate(360deg) translateX(40px) rotate(-360deg);
+        
+    }
 }
 .btn{
     padding: 10px 20px;
     border: none;
+    width: 20%;
     border-radius: 34px;
     background: linear-gradient(90deg, gold, #ff3000);
     color: #fff;
@@ -29,6 +78,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     width: 80%;
+    gap: 10px;
     padding: 10px;
 }
 .instagram{
@@ -41,6 +91,9 @@
     border-radius: 7px;
     background: honeydew;
     padding: 10px;
+}
+.block{
+    color: #333;
 }
 .linkdin{
     width: 90%;
@@ -67,4 +120,24 @@
 .NextImg{
     width: 100%;
     height: 200px;
+}
+@media only screen and (max-width: 768px) {
+    .twocol, .threecol{
+        grid-template-columns: 1fr;
+    }
+    .twocol, .left{
+        width: 100%;
+        text-align: center;
+    }
+    .btn{
+        width: 80%;
+        margin: 10px auto;
+    }
+    .right{
+        overflow: visible;
+    }
+    .NextImgdiff{
+        width: 200px;
+        height: 200px;
+    }
 }
