--- a/components/components.module.css
+++ b/components/components.module.css
@@ -294,6 +294,7 @@
 }
 .p{
   text-align: center;
+  padding: 10px;
 }
 /* Styling Of Our Brand New Mobile View 😉 */
 @media only screen and (max-width: 768px) {
