--- a/styles/registration.module.css
+++ b/styles/registration.module.css
@@ -1,5 +1,16 @@
 .Registration{
     width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url(../public/animated-bg.gif);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.SelectBatch{
+    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -10,17 +21,17 @@
     background-size: cover;
 }
 .twocol{
-    width: 100%;
-    height: 100vh;
+    width: 70%;
+    height: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    place-content: center;
-    padding: 10px 100px;
     background: rgba(225,225,225,0.1);
     backdrop-filter: blur(10px);
     box-shadow: -1px -1px 20px 2px rgba(0,0,0,0.1);
+    place-content: center;
+    padding: 10px 10px;
     border-radius: 7px;
-    margin: 20px auto;
+    margin: 90px auto;
     color: #fff;
 }
 .h1{
@@ -63,7 +74,7 @@
     box-shadow: -1px -1px 20px 2px rgba(0,0,0,0.1);
     border: none;
     border-radius: 7px;
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     height: auto;
 }
@@ -97,13 +108,74 @@
     color: mediumaquamarine;
     text-decoration: underline;
 }
+.Padd{
+    padding: 10px 2px;
+    border: none;
+    outline: none;
+    border-radius: 7px;
+}
+.basicfeatures {
+    width: 100%;
+    box-shadow: 0 2px 10px rgba(178, 178, 178, 0.35);
+    border-radius: 10px;
+    background-color: aliceblue;
+    margin-top: 10px;
+    padding: 20px;
+  }
+  .b{
+    background: linear-gradient(50deg, yellow, #ff3000);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    font-size: 12px;
+    font-weight: 800;
+  }
+  .b1{
+    background: linear-gradient(50deg, yellow, #ff3000);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    font-size: 32px;
+    font-weight: 800;
+  }
+  .batchinfo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 60px;
+    padding: 10px;
+    background: linear-gradient(45deg, orange, #ff3000);
+    color: #f7f5f2;
+    border-radius: 6px;
+  }
+  .smalltext2{
+  font-size: 12px;
+  color: #020e4a;
+}
+  .select{
+    padding: 10px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    position: absolute;
+    right: 30px;
+  }
+  .p{
+    color: #333;
+  }
 @media only screen and (max-width: 768px) {
     .Registration{
         height: auto;
     }
+    .SelectBatch{
+        height: auto;
+    }
     .twocol{
         grid-template-columns: 1fr;
-        padding: 50px 0px;
+        width: 98%;
+        padding: 10px;
         height: auto;
     }
     .leftside{
