--- a/styles/courses.module.css
+++ b/styles/courses.module.css
@@ -618,6 +618,9 @@ height: 36px;
 .li {
   padding: 5px;
 }
+.nextpower{
+  margin: 30px 0px;
+}
 .h1blow {
   color: #020e4a;
   font-family: Nunito;
@@ -636,7 +639,7 @@ height: 36px;
   margin-top: 20px;
 }
 .buybtn {
-  padding: 20px 20px;
+  padding: 20px 50px;
   width: 100%;
   color: #f7f5f2;
   border: none;
@@ -751,13 +754,13 @@ height: 36px;
 .feedbackbox{
   display: flex;
   flex-direction: column;
-  width: 559px;
+  width: 500px;
   border-radius: 14px;
   padding: 10px;
-  height: 253px;
+  height: 285px;
   gap: 10px;
   margin: 10px auto;
-  border: 0.1px solid silver;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
 }
 .ImagePic{
   width: 55px;
@@ -787,6 +790,15 @@ height: 36px;
   background-repeat: no-repeat;
   background-size: cover;
   object-fit: cover;
+  border-radius: 50%;
+}
+.ImagePic4{
+  width: 55px;
+  height: 55px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
   border-radius: 50%;
 }
 .picandtittle{
@@ -889,5 +901,15 @@ height: 36px;
   .projectsbox5{
     width: 100%;
     overflow: hidden;
+  }
+  .buybtn{
+    padding: 20px 40px;
+  }
+  .feedbackbox{
+    width: 95%;
+    height: auto;
+  }
+  .abouttext{
+    margin-left: 30px;
   }
 }
