--- a/components/components.module.css
+++ b/components/components.module.css
@@ -141,7 +141,7 @@
     justify-content: center;
     align-items: center;
     width: 90%;
-    height: 90vh;
+    height: auto;
     position: fixed;
     top: 80px;
     left: 0;
