--- a/styles/careers.module.css
+++ b/styles/careers.module.css
@@ -142,7 +142,7 @@
         text-align: center;
     }
     .twocol{
-        border: 0.2px solid #333;
+        box-shadow: -1px -1px 17px 12px rgba(0,0,0,0.1);
         border-radius: 7px;
         margin: 10px auto;
     }
