--- a/styles/courses.module.css
+++ b/styles/courses.module.css
@@ -112,8 +112,8 @@
   width: 40%;
   border: none;
   border-radius: 35px;
-  background: #ff3000;
-  color: white;
+  background: #020e4a;
+  color: #e7f8f5;
   text-transform: uppercase;
   cursor: pointer;
   font-weight: 400;
@@ -121,8 +121,9 @@
   font-family: "Nunito", sans-serif;
 }
 .btn:hover {
-  background: rgba(225, 225, 225, 0.2);
+  background: #000000;
   backdrop-filter: blur(10px);
+  color: #ff3000;
 }
 .black{
   color: #020e4a;
@@ -538,6 +539,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   width: 100%;
   height: 137px;
   box-shadow: 0 2px 10px rgba(178, 178, 178, 0.35);
@@ -863,6 +865,7 @@ height: 36px;
   }
   .coursesSecond{
     flex-direction: column;
+    height: auto;
   }
   .twocolnext{
     grid-template-columns: 1fr;
@@ -903,13 +906,33 @@ height: 36px;
     overflow: hidden;
   }
   .buybtn{
-    padding: 20px 40px;
+    padding: 10px 20px;
   }
   .feedbackbox{
     width: 95%;
     height: auto;
   }
+  .rightcol2{
+    padding-top: 20px;
+  }
   .abouttext{
     margin-left: 30px;
+  }
+  .box3{
+    width: 95%;
+    padding: 20px;
+    height: auto;
+    margin: 10px auto;
+  }
+  .Reactaddonsnext{
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    margin: 0;
+  }
+  .boxnext{
+    margin: 0 auto;
+  }
+  .h1nex2{
+    text-align: center;
   }
 }
