--- a/components/components.module.css
+++ b/components/components.module.css
@@ -362,6 +362,14 @@
   padding: 20px;
 }
 /* Styling Of Our Brand New Mobile View 😉 */
+@media only screen and (max-width: 1024px) {
+  .navbar{
+    width: 90%;
+  }
+  .logo{
+    font-size: 17px;
+  }
+}
 @media only screen and (max-width: 768px) {
   .navbar {
     width: 95%;
