--- a/components/components.module.css
+++ b/components/components.module.css
@@ -370,6 +370,21 @@
     font-size: 17px;
   }
 }
+@media only screen and (max-width: 820px) {
+  .navbar {
+    width: 95%;
+  }
+  .logo{
+    font-size: 1rem;
+  }
+  .menubox{
+    display: none;
+  }
+  .TbGridDots{
+    display: block;
+    font-size: 18px;
+  }
+}
 @media only screen and (max-width: 768px) {
   .navbar {
     width: 95%;
