--- a/styles/contact.module.css
+++ b/styles/contact.module.css
@@ -87,6 +87,17 @@
     -webkit-background-clip: text;
     background-clip: text;
   }
+  @media only screen and (max-width: 820px) {
+    .twocol{
+        grid-template-columns: 1fr;
+    }
+    .contactIMG{
+        margin: 10px auto;
+    }
+    .left{
+        text-align: center;
+    }
+  }
   @media only screen and (max-width: 768px) {
     .contact{
         height: auto;
