--- a/styles/registration.module.css
+++ b/styles/registration.module.css
@@ -168,6 +168,12 @@
   .p{
     color: #333;
   }
+  @media only screen and (max-width: 820px) {
+    .twocol{
+      grid-template-columns: 1fr;
+      width: 90%;
+    }
+  }
 @media only screen and (max-width: 768px) {
     .Registration{
         height: auto;
